# titanic-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: tutorial.ipynb
src/titanic_tools/: __init__.py  analysis.py  data.py
