[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "titanic-tools"
version = "0.1.0"
description = "Beginner-friendly utilities for Titanic survival analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["pandas>=2.0", "numpy>=1.24", "matplotlib>=3.7", "seaborn>=0.12"]
